fixed a bunch of display issues: * Clean up Listen Live page * Unify divider on More From This Episode * Spacing on Become a Sponsor on ads * Remove bottom border on last #sidebar-top widget  * Tighten spacing on captions * Better Menu icon for Responsive Nav * Fix FB Like Button in masthead

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -47,6 +47,12 @@
 		text-align: right;
 		line-height: $baseLineHeight;
 	}
+	.comment-wrap {
+		border-top:1px solid $grayLight;
+		.comment-count, .comments {
+			border:none;
+		}
+	}
 }
 
 article {
