--- a/app/assets/stylesheets/assets.css.scss
+++ b/app/assets/stylesheets/assets.css.scss
@@ -1,4 +1,4 @@
-.asset-block {
+.asset-block, .cbase .asset-block {
 	max-width: 100% !important;
 	height: auto !important;
 	
