--- a/app/assets/stylesheets/base/minimal.css.scss
+++ b/app/assets/stylesheets/base/minimal.css.scss
@@ -70,7 +70,7 @@ body.minimal {
 	
 	footer {
 		text-align: center;
-		padding-bottom: 10px;
+		padding: 10px 0;
 		ul {
 			margin: 0;
 			list-style: none;
